--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.1
-loader_version=0.15.11
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.1
+loader_version=0.16.9
 
 # Mod Properties
-mod_version=0.8.1-1.21
-maven_group=hydraheadhunter.commandstatistics
-archives_base_name=command-statistics
+mod_version=1.0.0
+maven_group=com.example
+archives_base_name=template-mod
 
 # Dependencies
-fabric_version=0.100.1+1.21
+fabric_version=0.110.5+1.21.4
